# in-stamp-archive

./: .gitignore  FIXES.md  README.md  SPEC.md
claudedocs/: IMPLEMENTATION_WORKFLOW.md  PHASE_4.3_SEARCH_FILTERING.md  PHASE_4.4_EXPORT_IMPORT.md  PHASE_4_MAP_INTEGRATION.md  SYSTEM_DESIGN.md  TESTING_GUIDE.md  api-reference.md  code-quality-analysis-2025-11-04.md
fastapi_backend/: .env.example  README.md  pyproject.toml
fastapi_backend/alembic_migrations/: env.py
fastapi_backend/alembic_migrations/versions/: 0f42a934865d_create_goshuin_tables.py  7b2fe226cc54_merge_heads.py  c5c56a879b8c_add_spot_model.py
fastapi_backend/app/: config.py  database.py  main.py  models.py
fastapi_backend/app/api/: __init__.py  deps.py
fastapi_backend/app/api/routes/: __init__.py  export.py  goshuin.py  goshuin_images.py  prefectures.py  spot_images.py  spots.py
fastapi_backend/app/models/: __init__.py  goshuin_images.py  goshuin_records.py  item.py  spots.py  user.py
fastapi_backend/app/schemas/: __init__.py  export.py  goshuin.py  images.py  prefectures.py  spots.py
fastapi_backend/app/services/: __init__.py  export.py  storage.py
fastapi_backend/commands/: generate_openapi_schema.py
fastapi_backend/tests/: conftest.py  mock_storage.py
fastapi_backend/tests/api/: test_export.py  test_goshuin.py  test_goshuin_images.py  test_prefectures.py  test_spot_images.py  test_spots.py
fastapi_backend/tests/services/: test_storage.py
local-shared-data/: openapi.json
nextjs-frontend/: .dockerignore  .gitignore  Dockerfile  jest.config.ts  middleware.ts  next.config.mjs  openapi-ts.config.ts  package.json  pnpm-lock.yaml
nextjs-frontend/__tests__/: login.test.tsx  loginPage.test.tsx  passwordReset.test.tsx  passwordResetConfirm.test.tsx  register.test.ts  registerPage.test.tsx  setup.ts
nextjs-frontend/app/: globals.css  layout.tsx
nextjs-frontend/components/: page-pagination.tsx  theme-provider.tsx  theme-toggle.tsx
nextjs-frontend/components/actions/: goshuin-actions.ts  items-action.ts  login-action.ts  logout-action.ts  password-reset-action.ts  register-action.ts
nextjs-frontend/lib/: auth-fetch.ts  errors.ts  geocoding.ts  goshuin.ts  logger.ts  map-utils.ts  markdown.ts  prefectures.ts  search-history.ts  server-api.ts  spots.ts  utils.ts
(+58 files in other folders)
